# paralel_labs

./: .gitignore  lab2_1_serial.cpp
lab2/: lab2_1.cpp  lab2_2.cpp  lab2_3.cpp  lab2_3_2.cpp
lab2/lab2_3/: lab2_3.cpp  lab2_3_2.cpp  run_benchmarks.py
lab3/lab3_1/: CMakeLists.txt  lab3_1.cpp  run_benchmarks_lab3.py
lab3/lab3_2/: CMakeLists.txt  lab3_2  main.cpp  server.h
lab4/: lab4.py
lab5/: bench.py  lab5.py
lab6/: CMakeLists.txt  bench.py  lab6.cpp
